--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>IosTest</title>
   <base href="/iostest/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, interactive-widget=overlays-content">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
