--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html lang="en"><head>
-  <meta charset="utf-8">
-  <title>IosTest</title>
-  <base href="/iostest/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
-<body>
-  <app-root></app-root>
-<script src="runtime.ee626b7a875d1326.js" type="module"></script><script src="polyfills.0ba86ce5e8e84e90.js" type="module"></script><script src="main.e725a121400c4f4c.js" type="module"></script>
+    <meta charset="utf-8">
+    <title>IosTest</title>
+    <base href="/iostest/">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+  <body>
+    <app-root></app-root>
+  <script src="runtime.ee626b7a875d1326.js" type="module"></script><script src="polyfills.0ba86ce5e8e84e90.js" type="module"></script><script src="main.e725a121400c4f4c.js" type="module"></script>
 
 </body></html>
